03.vpc/01.vpc.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Build VPC",
    "Parameters": {
    },
    "Mappings": {
        "SubnetConfig": {
            "VPCMapping": {"CIDR":"192.168.10.0/16"},
            "SubnetMapping1": {"CIDR":"192.168.10.0/24"},
            "SubnetMapping2": {"CIDR":"192.168.11.0/24"}
        }
    },
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": { "Fn::FindInMap" : [ "SubnetConfig", "VPCMapping", "CIDR" ]},
                "EnableDnsSupport" : "true",
                "EnableDnsHostnames" : "true",
                "Tags":[{
                    "Key":"Name",
                    "Value":"JohnTest"
                }, {
                    "Key":"Purpose",
                    "Value":"John Test"
                }, {
                    "Key":"CreatedBy",
                    "Value":"JohnH"
                }]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties":{
                "Tags":[{
                    "Key":"Name",
                    "Value":"johnIG"
                }, {
                    "Key":"Purpose",
                    "Value":"John Test"
                }, {
                    "Key":"CreatedBy",
                    "Value":"JohnH"
                }]
            }
        },
        "VPCGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {"Ref": "VPC"},
                "InternetGatewayId": {"Ref": "InternetGateway"}
            }
        },
        "PublicSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": {"Fn::Select": ["0", {"Fn::GetAZs": {"Ref": "AWS::Region"}}]},
                "CidrBlock": {"Fn::Join": ["", [{ "Fn::FindInMap" : [ "SubnetConfig", "SubnetMapping1", "CIDR" ]}]]},
                "VpcId": {"Ref": "VPC"},
                "MapPublicIpOnLaunch": "true",
                "Tags":[{
                    "Key":"Name",
                    "Value":"JohnH PublicSubnet1"
                }, {
                    "Key":"Purpose",
                    "Value":"JohnH Infrastructure"
                }, {
                    "Key":"CreatedBy",
                    "Value":"JohnH"
                }]
            }
        },
        "PublicSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": {"Fn::Select": ["1", {"Fn::GetAZs": {"Ref": "AWS::Region"}}]},
                "CidrBlock": {"Fn::Join": ["", [{ "Fn::FindInMap" : [ "SubnetConfig", "SubnetMapping2", "CIDR" ]}]]},
                "VpcId": {"Ref": "VPC"},
                "MapPublicIpOnLaunch": "true",
                "Tags":[{
                    "Key":"Name",
                    "Value":"JohnH PublicSubnet2"
                }, {
                    "Key":"Purpose",
                    "Value":"JohnH Infrastructure"
                }, {
                    "Key":"CreatedBy",
                    "Value":"JohnH"
                }]
            }
        },
        "RouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {"Ref": "VPC"},
                "Tags":[{
                    "Key":"Name",
                    "Value":"JohnH Route Table"
                }, {
                    "Key":"Purpose",
                    "Value":"JohnH Infrastructure"
                }, {
                    "Key":"CreatedBy",
                    "Value":"JohnH"
                }]
            }
        },
        "RouteTableAssociation1": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {"Ref": "PublicSubnet1"},
                "RouteTableId": {"Ref": "RouteTable"}
            }
        },
        "RouteTableAssociation2": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {"Ref": "PublicSubnet2"},
                "RouteTableId": {"Ref": "RouteTable"}
            }
        },
        "Route": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "VPCGatewayAttachment",
            "Properties": {
                "RouteTableId": {"Ref": "RouteTable"},
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {"Ref": "InternetGateway"}
            }
        },
        "NetworkAcl": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {"Ref": "VPC"},
                "Tags":[{
                    "Key":"Name",
                    "Value":"JohnH NetworkACL"
                }, {
                    "Key":"Purpose",
                    "Value":"JohnH Infrastructure"
                }, {
                    "Key":"CreatedBy",
                    "Value":"JohnH"
                }]
            }
        },
        "SubnetNetworkAclAssociation1": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {"Ref": "PublicSubnet1"},
                "NetworkAclId": {"Ref": "NetworkAcl"}
            }
        },
        "SubnetNetworkAclAssociation2": {
            "Type": "AWS::EC2::SubnetNetworkAclAssociation",
            "Properties": {
                "SubnetId": {"Ref": "PublicSubnet2"},
                "NetworkAclId": {"Ref": "NetworkAcl"}
            }
        },
        "NetworkAclEntryIncoming": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {"Ref": "NetworkAcl"},
                "RuleNumber": "1",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "false",
                "CidrBlock": "0.0.0.0/0"
            }
        },
        "NetworkAclEntryOutgoing": {
            "Type": "AWS::EC2::NetworkAclEntry",
            "Properties": {
                "NetworkAclId": {"Ref": "NetworkAcl"},
                "RuleNumber": "1",
                "Protocol": "-1",
                "RuleAction": "allow",
                "Egress": "true",
                "CidrBlock": "0.0.0.0/0"
            }
        },
        "SecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": {"Ref": "AWS::StackName"},
                "VpcId": {"Ref": "VPC"},
                "SecurityGroupIngress": [{
                    "CidrIp": "0.0.0.0/0",
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "ToPort": 80
                }, {
                    "CidrIp": "0.0.0.0/0",
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "ToPort": 443
                }, {
                    "CidrIp": "0.0.0.0/0",
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "ToPort": 22
                }],
                "Tags":[{
                    "Key":"Name",
                    "Value":"JohnH SG"
                }, {
                    "Key":"Purpose",
                    "Value":"JohnH Infrastructure"
                }, {
                    "Key":"CreatedBy",
                    "Value":"JohnH"
                }]
            }
        }
    },
    "Outputs": {
        "VPC": {
            "Description": "VpcId",
            "Value": {"Ref": "VPC"}
        },
        "PublicSubnet1": {
            "Description": "PublicSubnet1",
            "Value": { "Ref" : "PublicSubnet1"}
        },
        "PublicSubnet2": {
            "Description": "PublicSubnet2",
            "Value": { "Ref" : "PublicSubnet2"}
        },
        "RouteTable": {
            "Description": "RouteTable",
            "Value": { "Ref" : "RouteTable"}
        }
    }
}
